@@ -3,6 +3,11 @@
 # $Header: $
 
   15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
+  emacs-cvs-23.0.0-r2.ebuild:
+  correct Header
+
+  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   +files/emacs-cvs-21.3.50-nofink.diff, +emacs-cvs-22.0.95-r2.ebuild,
   +emacs-cvs-22.0.9999-r6.ebuild, +emacs-cvs-23.0.0-r2.ebuild,
   +files/emacs-cvs-disable_alsa_detection.patch,
